<resources>
    <string name="app_name">ConcertBuddies</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_settings">Settings</string>
    <string name="locations">Add Locations</string>
    <string name="entries">Chicago\nBoston</string>

    <string-array name="cities_list">
        <item>Chicago</item>
        <item>Boston</item>
        <item>Atlanta</item>
        <item>Los Angeles</item>
        <item>New York City</item>
        <item>Seattle</item>
        <item>Detroit</item>
        <item>Indianapolis</item>
    </string-array>
    <string name="buddiesu"><u>BUDDIES</u></string>
    <string name="buddies">BUDDIES</string>
    <string name="myBuddies">My Buddies</string>
    <string name="recBuddies">Recommended Buddies</string>
    <string name="events"><u>EVENTS</u></string>
    <string name="buddyMatching"><u>Buddy Matching</u></string>
    <string name="search">Search...</string>
    <string name="myEvents">My Events</string>
    <string name="recEvents">Recommended Events</string>
    <string name="artists">Artists</string>
    <string name="your_string_here">This is an <u>underline</u>.</string>
    <string name="kelly_description">I\'m Kelly and I love spending time going to concerts and playing guitar. I have a 3 legged cat and I\'m super into extreme sports.</string>
    <string name="artists_tab">Artists</string>
    <string name="description_tab">Description</string>
    <string name="send_invitation">Invitation sent!</string>
</resources>
