<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center_horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="5dp"
                    android:src="@drawable/search1"
                    android:layout_marginTop="8dp"
                    />
                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/search"
                    android:layout_marginBottom="3dp"
                    android:textColor="@color/violetAccent2"
                    android:textSize="17dp"
                    android:layout_marginLeft="10dp"/>-->
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/violetAccent2"
                    android:textSize="17dp"
                    android:id="@+id/password"
                    android:hint="@string/search"
                    android:inputType="textCapSentences"
                    />
            </LinearLayout>
            <android.support.design.widget.TabLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/searchpage_tabs"
                app:tabGravity="fill"
                app:tabMode="fixed"
                app:tabTextColor="@android:color/white"
                app:tabSelectedTextColor="@color/white"
                app:tabBackground="@drawable/tab_color_selector"
                app:tabIndicatorColor="@color/violetAccent1"
                android:layout_marginBottom="1dp">

                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/search_buddies_tab"
                    android:text="@string/buddies"/>

                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/search_artists_tab"
                    android:text="@string/artists_tab"/>

            </android.support.design.widget.TabLayout>
            <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/search_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </android.support.v4.view.ViewPager>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>